Set an autoscaling icon

--- a/docs/icon/icon.yml
+++ b/docs/icon/icon.yml
@@ -1,16 +1,16 @@
 ---
 name: Settings
-url: https://thenounproject.com/term/settings/29763/
+url: https://thenounproject.com/term/settings/216686/
 author:
-  name: Thomas Weber, DE
-  url: https://thenounproject.com/elordin
+  name: Motaz Elewa
+  url: https://thenounproject.com/motaz.elewa
 license:
   name: Public Domain
 tags:
   - Settings
   - Adjust
-  - Buttons
-  - Knobs
+  - Equalizer
   - Menu
-  - Slider
-  - Switches
+  - Round
+  - Sound
+  - Volume
